Se ajusta estrctura

--- a/wp-content/themes/mobig-child/assets/css/_site-settings.scss
+++ b/wp-content/themes/mobig-child/assets/css/_site-settings.scss
@@ -40,7 +40,8 @@ $col1: #FE5B6B;
 $col2: #E8BE46;
 $col3: #6B6B6B;
 $col4: #A3A2A2;
-$col5: #f36d21;
+$col5: #F7F7F7;
+
 $col6: #d65b1d;
 $col7: #76777a;
 $col8: #afafb1;
