--- a/wp-content/themes/mobig-child/assets/css/layout/_header.scss
+++ b/wp-content/themes/mobig-child/assets/css/layout/_header.scss
@@ -8,3 +8,155 @@
     background-color: $white; top: 0;
   }
 }
+
+.brand {
+  width: 100%; height: auto; padding: 0; margin: 0;
+  a {
+    display: block;
+    img {
+      display: block; width: 100%; max-width: 40px; height: auto; margin: 0 auto 0 0; padding: 0;
+    }
+    .site-title {
+      font-size: 0; text-indent: -9999px; color: $white; opacity: 0; margin: 0; padding: 0;
+    }
+  }
+}
+
+.menuMain {
+  width: 100%; height: auto; padding: 0; margin: 0 0 0 0;
+  nav {
+    width: 100%; height: auto; padding: 0; margin: 0 0 0 0; display: none;
+    ul {
+      width: 100%; height: auto; padding: 0; margin: 0 0 0 0; list-style-type: none; @include displayFlex(flex, row, center, center, wrap);
+      li {
+        list-style-type: none; padding: 0 0 0 0; margin: 0 30px 0 0;
+        a {
+          color: $c3; margin: 0 0 0 0; padding: 0; text-transform: uppercase; font-size: rem(14px);
+          &.menuIemHover {
+            position: relative;
+            &:before {
+              content: ''; width: 0; height: 3px; padding: 0 0; margin: 0 0 0 0; background-color: $col1; @include position(absolute, null null -10px 0); @include transition(all 0.25s ease);
+            }
+          }
+          &.secondary-menu {
+            &:after {
+              content: '\f078'; font-family: 'fontAwesome'; width: 15px; height: 15px; font-size: rem(8px); @include position(absolute, 2px -17px null null); text-align: center; line-height: 15px;
+            }
+          }
+          &:hover {
+            color: $col1;
+            &.menuIemHover {
+              &:before {
+                width: 100%;
+              }
+            }
+          }
+          &.activo {
+            color: $col1;
+            &.menuIemHover {
+              &:before {
+                width: 100%;
+              }
+            }
+          }
+          // &:link, &:visited {
+          //   color: $col1;
+          // }
+          // &:active {
+          //   color: $c3;
+          // }
+        }
+        &:last-child {
+          margin: 0 0 0 0;
+        }
+        & .block-sub-menu {
+          width: 100%; height: auto!important; padding: 20px 0; margin: 0; background-color: $white; @include position(absolute, 100% null null 0); z-index: 90;
+          ul.menuCars {
+            width: 100%; height: auto; padding: 0; margin: 0 0 20px 0; list-style-type: none; @include displayFlex(flex, row, flex-start, flex-start, wrap);
+            li {
+              list-style-type: none; padding: 0 0; margin: 0 40px 0 0;
+              a {
+                color: $black; font-size: rem(14px); position: relative;
+                &:before {
+                  content: ''; width: 100%; height: 0; opacity: 0; padding: 0; margin: 0 0 0 0; background-color: $col1; @include position(absolute, -18px null null 0); @include transition(all 300ms ease);
+                }
+                // &.activo {
+                //   color: $col1;
+                //   &:before {
+                //     height: 3px; opacity: 1;
+                //   }
+                // }
+                &:hover {
+                  color: $col1;
+                  &:before {
+                    height: 3px; opacity: 1;
+                  }
+                }
+              }
+              &:last-child {
+                margin: 0 0 0 0;
+              }
+              &.activo {
+                a {
+                  color: $col1;
+                  &:before {
+                    height: 3px; opacity: 1;
+                  }
+                }
+              }
+            }
+          }
+          .car-tab  {
+            width: 100%; height: auto; padding: 0; margin: 0; position: relative; display: none;
+            &.shows { display: block; }
+            ul {
+              width: 100%; height: auto; padding: 0; margin: 0 0 0 0; list-style-type: none; @include displayFlex(flex, row, flex-start, center, wrap);
+              li {
+                list-style-type: none; width: calc(16.6666% - 10px); padding: 0; margin: 0 5px 0 5px; position: relative;
+                img {
+                  display: block; width: 100%; max-width: 130px; margin: 0 auto 10px auto; padding: 0;
+                }
+                h5 { font-size: rem(13px); text-align: center; color: $c4; margin: 0; padding: 0; }
+                a { @extend .overlayClassAbs; text-indent: -9999px; opacity: 0; font-size: 0; z-index: 2; }
+              }
+            }
+          }
+          &:before {
+            content: ''; width: 100%; height: 5px; padding: 0; margin: 0 0 0 0; background-color: $col1; @include position(absolute, 0 null null 0);
+          }
+        }
+        &.activo {
+          a {
+            color: $col1;
+          }
+        }
+        &.subPosItem {
+          position: relative;
+        }
+        // & > .sub-menu-desk {
+        //   width: 200px; height: auto!important; padding: 20px 0 14px 0; margin: 0; background-color: $white; @include position(absolute, 100% null null 50%); @include transform(translateX(-50%)); z-index: 90; @include displayFlex(flex, column, center, center, wrap); border-radius: 6px; display: none; @include transition(all 0.30s ease);
+        //   li {
+        //     padding: 5px 0; margin: 0 auto; display: block; border-bottom: 0.6px solid rgba($black, 0.30); width: calc(100% - 10px); text-align: center;
+        //     a {
+        //       font-size: rem(13px); text-align: center;
+        //       &:before {
+        //         display: none;
+        //       }
+        //     }
+        //     &:last-child {
+        //       border-bottom: none;
+        //     }
+        //   }
+        //   &:before {
+        //     content: ''; width: 100%; height: 3px; padding: 0; margin: 0 0 0 0; background-color: $col1; @include position(absolute, null null 0 0);
+        //   }
+        // }
+        // &:hover {
+        //   & > .sub-menu-desk {
+        //     display: block;
+        //   }
+        // }
+      }
+    }
+  }
+}
