--- a/wp-content/themes/mobig-child/assets/css/layout/_main.scss
+++ b/wp-content/themes/mobig-child/assets/css/layout/_main.scss
@@ -11,3 +11,71 @@ main {
 article {
   width: 100%; height: auto; padding: 0; margin: 0; position: relative;
 }
+
+// Slider Section 
+.hero-sec {
+  width: 100%; height: 400px; @include position(relative, null null null null); padding: 0; margin: 0; background-attachment: local; background-position: center; background-repeat: no-repeat; background-size: cover; overflow: hidden; background-color: $col1;
+  & .slideCt {
+    @include position(absolute, null null 50px 0); @include transform(translate(0, -50%)); width: 100%; height: auto; padding: 0; margin: 0; @include box-sizing(border-box); z-index: 3;
+    opacity: 1; @include transition(opacity 1.5s ease 0.55s, transform 0.5s ease-out 0.45s, filter 0.5s ease 0.45s);
+    &__slide {
+      margin-bottom: 0!important;
+    }
+    &__box {
+      width: 100%; height: auto; padding: 0; margin: 0; @include box-sizing(border-box);
+    }
+    &__cap {
+      width: 100%; height: auto; padding: 0; margin: 0; @include box-sizing(border-box);
+    }
+    & .title-hero {
+      color: $white; @include fluid-type(23px, 40px, 320px, 1200px); margin: 0; padding: 0; text-align: left;
+    }
+    & .desc-hero {
+      width: 100%; height: auto; padding: 0; margin: 0 auto 20px 0; position: relative; @include box-sizing(border-box); color: $white; text-align: left; font-family: $hlight; @include fluid-type(13px, 20px, 320px, 1200px); text-transform: uppercase;
+      & p {
+        color: $white; margin: 0; padding: 0; font-family: $hlight;
+      }
+    }
+    & .btn-hero {
+      width: 100%; height: auto; padding:0 ; margin: 0; position: relative; @include box-sizing(border-box); text-align: left;
+    }
+  }
+  & .overlayHero {
+    @extend .overlayClassAbs; z-index: 1; background-color: rgba($col1, 0.15);
+  }
+  & .header-title {
+    width: 100%; height: 100%; @include position(absolute, 0 0 null null); z-index: 2; background-color: $col3; @include transition(all 0.25s);
+  }
+  & .scrollNext {
+    z-index: 5; @include position(absolute, null null 10px 50%); @include transform(translateX(-50%)); z-index: 3; margin: 0; padding: 60px 0 0;
+    & span {
+      @include position(absolute, 0 null null 30%); width: 30px; height: 50px; margin-left: -15px; border: 1px solid $white; border-radius: 50px; @include box-sizing(border-box);
+      &:before {
+        @include position(absolute, 10px null null 50%); content: ''; width: 6px; height: 6px; margin-left: -3px; background-color: $white; border-radius: 100%; -webkit-animation: sdb10 2s infinite; animation: sdb10 2s infinite; @include box-sizing(border-box);
+      }
+    }
+  }
+  & .imgHeroAbs {
+    @include position(absolute, 0 0 null null); width: auto; height: 100%; padding: 0; margin: 0; z-index: 1;
+  }
+  @media all and (min-width: 768px) {
+    height: 450px;
+    & .scrollNext {
+      bottom: 60px;
+    }
+  }
+  // @media all and (min-width: 992px) {
+  //   background-attachment: fixed;
+  // }
+  @media all and (min-width: 1024px) {
+    height: 500px;
+  }
+  @media all and (min-width: 1200px) {
+    height: 620px;
+  }
+  body.is-preload & {
+    > .slideCt {
+      @include transform(translate(-0.5em, -50%)); @include filter(blur(0.125em));
+		}
+	}
+}
