--- a/wp-content/themes/mobig-child/assets/css/layout/_main.scss
+++ b/wp-content/themes/mobig-child/assets/css/layout/_main.scss
@@ -12,7 +12,6 @@ article {
   width: 100%; height: auto; padding: 0; margin: 0; position: relative;
 }
 
-<<<<<<< HEAD
 article.maps {
     position: relative;
     overflow: hidden;
@@ -28,7 +27,7 @@ article.maps {
     height: 400px;
     padding: 0;
     margin-bottom: 20px;
-=======
+}
 // Slider Section 
 .hero-sec {
   width: 100%; height: 400px; @include position(relative, null null null null); padding: 0; margin: 0; background-attachment: local; background-position: center; background-repeat: no-repeat; background-size: cover; overflow: hidden; background-color: $col1;
@@ -95,5 +94,4 @@ article.maps {
       @include transform(translate(-0.5em, -50%)); @include filter(blur(0.125em));
 		}
 	}
->>>>>>> d081b9b41feae27415d6177f1043246dbf5f3e7f
 }
