--- a/wp-content/themes/mobig-child/assets/css/_base.scss
+++ b/wp-content/themes/mobig-child/assets/css/_base.scss
@@ -6,7 +6,7 @@ html {
 }
 body {
   background-color: $white;
-  font-family: $roboto;
+  font-family: $regular;
   color: $col12;
   @include fluid-type(13px, 16px, 320px, 1200px);
   font-weight: 400;
