--- a/wp-content/themes/mobig-child/assets/css/layout/_main.scss
+++ b/wp-content/themes/mobig-child/assets/css/layout/_main.scss
@@ -72,7 +72,7 @@ article.maps {
     }
   }
   & .imgHeroAbs {
-    @include position(absolute, 0 0 null null); width: auto; height: 100%; padding: 0; margin: 0; z-index: 1;
+    @include position(absolute, 0 0 null null); width: auto; height: 100%; padding: 0; margin: 0; z-index: 1; opacity: 1; @include transition(opacity 300ms ease-in 1s);
   }
   @media all and (min-width: 768px) {
     height: 450px;
@@ -93,5 +93,8 @@ article.maps {
     > .slideCt {
       @include transform(translate(-0.5em, -50%)); @include filter(blur(0.125em));
 		}
+    > .imgHeroAbs {
+      opacity: 0;
+    }
 	}
 }
