--- a/wp-content/themes/mobig-child/assets/css/nprogress.css
+++ b/wp-content/themes/mobig-child/assets/css/nprogress.css
@@ -4,7 +4,7 @@
 }
 
 #nprogress .bar {
-  background: #712a81;
+  background: #FE5B6B;
 
   position: fixed;
   z-index: 1031;
@@ -22,7 +22,7 @@
   right: 0px;
   width: 100px;
   height: 100%;
-  box-shadow: 0 0 10px #712a81, 0 0 5px #712a81;
+  box-shadow: 0 0 10px #FE5B6B, 0 0 5px #FE5B6B;
   opacity: 1.0;
 
   -webkit-transform: rotate(3deg) translate(0px, -4px);
@@ -45,8 +45,8 @@
   box-sizing: border-box;
 
   border: solid 2px transparent;
-  border-top-color: #712a81;
-  border-left-color: #712a81;
+  border-top-color: #FE5B6B;
+  border-left-color: #FE5B6B;
   border-radius: 50%;
 
   -webkit-animation: nprogress-spinner 400ms linear infinite;
