Se ajusta hero y header

--- a/wp-content/themes/mobig-child/assets/css/_site-settings.scss
+++ b/wp-content/themes/mobig-child/assets/css/_site-settings.scss
@@ -43,8 +43,8 @@ $col2: #E8BE46;
 $col3: #6B6B6B;
 $col4: #A3A2A2;
 $col5: #F7F7F7;
+$col6: #D45A6A;
 
-$col6: #d65b1d;
 $col7: #76777a;
 $col8: #afafb1;
 $col9: #7e8080;
