--- a/wp-content/themes/mobig-child/assets/css/modules/buttons.scss
+++ b/wp-content/themes/mobig-child/assets/css/modules/buttons.scss
@@ -45,40 +45,34 @@
 
 // Botones S/Efecto
 .btnGen {
-  height: 42px; display: inline-flex; position: relative; overflow: hidden; color: $white; font-size: rem(16px); text-decoration: none; border-radius: 0; -webkit-border-radius: 0; text-transform: uppercase; @include box-sizing(border-box); box-shadow: 0 3px 5px rgba($black, 0.20); text-align: center; line-height: 42px; padding: 0 20px; margin: 0 0 10px; @include transition(all 300ms); border: none; cursor: pointer; font-weight: 300;
+  margin: 0; padding: 5px 18px 3px; @include transition(all 300ms); background-color: transparent; display: inline-block; width: auto; height: auto; color: $white; @include box-sizing(border-box); @include fluid-type(12px, 15px, 320px, 1200px); border-radius: 20px; font-family: $semibold; text-decoration: none;
   &__item {
-    width: auto; letter-spacing : 0.5px; word-wrap: break-word;
-    &--orange {
-      background: $col5; color: $white;
+    letter-spacing : 0.5px; word-wrap: break-word;
+    &--yellow {
+      background-color: $col2; color: $white; border: 2px solid $col2;
       &:hover, &:focus {
-        background: $col6; color: $white!important;
+        background-color: $col6; color: $white!important;
       }
     }
-    &--purple {
-      background: $col1; color: $white;
+    &--pink {
+      background-color: $col1; color: $white; border: 2px solid $col1;
       &:hover, &:focus {
-        background: $col2; color: $white!important;
+        background-color: $col6; color: $white!important;
       }
     }
     &.disabled, &[data-disabled] {
       pointer-events: none!important; opacity: 0.70; cursor: none;
     }
   }
-  @media all and (min-width: 768px) {
-    height: 52px; line-height: 52px; padding: 0 30px; margin: 0 0 20px; font-size: rem(18px);
-    &__item {
-      letter-spacing : 0.9px;
-    }
-  }
 }
 
 .btnSlideProd {
-  width: 32px; height: 64px; @include position(absolute, 50% null null null); background-color: transparent; line-height: 64px; border: none; outline: 0; display: none!important; text-align: center; z-index: 10; font-size: rem(42px); padding: 0; margin: 0; cursor: pointer; color: $col1; @include transition(all 0.23s); border-radius: 0; @include transition(opacity 0.45s ease-in-out);
+  width: 32px; height: 32px; @include position(absolute, 50% null null null); background-color: rgba($white, 0.20); line-height: 34px; border: none; outline: 0; display: none!important; text-align: center; z-index: 10; font-size: rem(13px); padding: 0; margin: 0; cursor: pointer; color: $white; @include transition(all 0.23s); border-radius: 50%; @include transition(opacity 0.45s ease-in-out, all 300ms ease);
   &:before, &:after {
     font-family: 'LineIcons';
   }
   &:hover {
-    color: $col2; border: none; background-color: transparent;
+    color: $col1; border: none; background-color: rgba($white, 0.90);
   }
   &.bLeftP {
     left: 7px; @include transform(translateY(-50%));
